--- a/flirdog/src/main/webapp/src/css/main/Header.css
+++ b/flirdog/src/main/webapp/src/css/main/Header.css
@@ -6,21 +6,26 @@
 }
 
 .logo {
-  height: 45px;
+  height: 55px;
   margin: 0 auto;
   display: block;
 }
 
 .spaceDiv {
-  width: 355px;
+  width: 335px;
 }
 
 @media (max-width: 1400px) {
   .spaceDiv {
-    width: 180px;
+    width: 150px;
   }
 }
 @media (max-width: 1154px) {
+  .logo {
+    max-height: 45px;
+    margin: 0 auto;
+    display: block;
+  }
   .spaceDiv {
     width: 0px;
   }
