--- a/flirdog/src/main/webapp/src/css/main/MainBody.css
+++ b/flirdog/src/main/webapp/src/css/main/MainBody.css
@@ -112,6 +112,11 @@
   cursor: pointer;
 }
 
+.dogSmallGroup {
+  width: 100%;
+  position: relative;
+}
+
 @media (max-width: 1400px) {
   .mainIconImgText {
     font-size: 1.4rem;
@@ -180,7 +185,7 @@
     color: white;
   }
   .mainIconImgText {
-    font-size: 1rem;
+    font-size: 1.2rem;
   }
   .mainIconImg {
     width: 100%;
@@ -215,7 +220,7 @@
     padding-right: 50px !important;
   }
   .mainIconImgText {
-    font-size: 0.6rem;
+    font-size: 1.2rem;
   }
   .mainIconImg {
     width: 100%;
