스타일:메인페이지 헤더 드랍다운 모바일버전 구현완료

--- a/flirdog/src/main/webapp/src/css/main/Community.css
+++ b/flirdog/src/main/webapp/src/css/main/Community.css
@@ -2,5 +2,6 @@
   background-color: white;
   border-radius: 5px;
   border: 2px solid rgb(221, 221, 221);
+  /* height를 width와 똑같이하고싶을때 */
   height: 350px;
 }
