--- a/flirdog/src/main/webapp/src/css/main/shoppingProduct.css
+++ b/flirdog/src/main/webapp/src/css/main/shoppingProduct.css
@@ -2,3 +2,12 @@
   border: 1px solid #b9b9b9;
   height: 300px;
 }
+
+.shoppingProductCard {
+  border: none;
+
+  transition: all 0.15s ease-in-out;
+}
+.shoppingProductCard:hover {
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
+}
