--- a/flirdog/src/main/webapp/src/css/admin/leftSide.css
+++ b/flirdog/src/main/webapp/src/css/admin/leftSide.css
@@ -14,6 +14,9 @@
   color: #868786;
   font-size: 0.8rem;
 }
+.subMenu:hover {
+  color: #f56084;
+}
 
 .leftSideRelative {
   width: 200px;
@@ -23,7 +26,7 @@
 .leftSideAbsolute {
   position: absolute;
   width: 200px;
-  height: 220px;
+  height: 320px;
 
   box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.16);
 }
