--- a/flirdog/src/main/webapp/src/css/admin/leftSide.css
+++ b/flirdog/src/main/webapp/src/css/admin/leftSide.css
@@ -26,7 +26,7 @@
 .leftSideAbsolute {
   position: absolute;
   width: 200px;
-  height: 320px;
+  height: calc(100vh - 70px);
 
   box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.16);
 }
