리팩토링: 메인페이지 css 모듈작업 완료 및 미디어쿼리 각각의 css모듈에 분리

--- a/flirdog/src/main/webapp/src/css/reset.css
+++ b/flirdog/src/main/webapp/src/css/reset.css
@@ -12,8 +12,8 @@
 }
 
 .px-10 {
-  padding-left: 8rem;
-  padding-right: 8rem;
+  padding-left: 50px;
+  padding-right: 50px;
 }
 
 .mt-6 {
@@ -55,7 +55,7 @@
 
 @media (max-width: 400px) {
   .px-10 {
-    padding-left: 1rem !important;
-    padding-right: 1rem !important;
+    padding-left: 50px !important;
+    padding-right: 50px !important;
   }
 }
