--- a/flirdog/src/main/webapp/src/css/main/1메인화면/mainIcon.module.css
+++ b/flirdog/src/main/webapp/src/css/main/1메인화면/mainIcon.module.css
@@ -6,3 +6,39 @@
 .mainIconImg {
   width: 40%;
 }
+
+@media (max-width: 1400px) {
+  .mainIconImgText {
+    font-size: 1.4rem;
+  }
+  .mainIconImg {
+    width: 50%;
+  }
+}
+
+@media (max-width: 1154px) {
+  .mainIconImgText {
+    font-size: 1.2rem;
+  }
+  .mainIconImg {
+    width: 60%;
+  }
+}
+
+@media (max-width: 620px) {
+  .mainIconImgText {
+    font-size: 1.2rem;
+  }
+  .mainIconImg {
+    width: 100%;
+  }
+}
+
+@media (max-width: 400px) {
+  .mainIconImgText {
+    font-size: 1.2rem;
+  }
+  .mainIconImg {
+    width: 100%;
+  }
+}
