--- a/flirdog/src/main/webapp/src/css/main/2베스트플러독/bestFlirdog.module.css
+++ b/flirdog/src/main/webapp/src/css/main/2베스트플러독/bestFlirdog.module.css
@@ -82,3 +82,86 @@
   height: 100%;
   color: white;
 }
+
+@media (max-width: 1154px) {
+  .bestFlirdogImg {
+    width: 100%;
+  }
+}
+
+@media (max-width: 880px) {
+  .bestFlirdogPinkLikeBtn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 90%;
+    height: 50px;
+    border-radius: 11px;
+
+    background-color: #e85b6c;
+  }
+  .likeBoneImg {
+    border-radius: 11px;
+    height: 80%;
+  }
+  .likeBoneText {
+    font-family: "Black Han Sans";
+    font-size: 2.2rem;
+    height: 100%;
+    color: white;
+  }
+}
+
+@media (max-width: 620px) {
+  .rankingBtn {
+    height: 40px;
+    font-size: 0.8rem;
+  }
+
+  .bestFlirdogPinkLikeBtn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 90%;
+    height: 30px;
+    border-radius: 7px;
+
+    background-color: #e85b6c;
+  }
+  .likeBoneImg {
+    border-radius: 8px;
+    height: 80%;
+  }
+  .likeBoneText {
+    font-family: "Black Han Sans";
+    font-size: 1.3rem;
+    height: 100%;
+    color: white;
+  }
+}
+
+@media (max-width: 400px) {
+  .bestFlirdogImgRoundHoverText {
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    width: 100%;
+    height: 100%;
+
+    border-radius: 50%;
+    color: white;
+    font-size: 1.2rem;
+    opacity: 0;
+
+    transition: all 0.15s ease-in-out;
+  }
+
+  .rankingBtn {
+    height: 30px;
+    font-size: 0.6rem;
+  }
+}
