--- a/flirdog/src/main/webapp/src/css/admin/rightContent.module.css
+++ b/flirdog/src/main/webapp/src/css/admin/rightContent.module.css
@@ -1,9 +1,34 @@
 .rightContent {
-  width: calc(100% - 200px);
+  width: calc(100% - 240px);
 
   position: absolute;
-  left: 200px;
-  top: 55.8px;
+  left: 240px;
+  margin-top: 10px;
+  /* top: 155.8px; */
+}
+.rightContentTop {
+  color: gray;
+  cursor: pointer;
+}
+
+.title {
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.titleSecond {
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.titleSecondStar {
+  color: red;
+  transform: translateY(2px);
+}
+
+.titleThird {
+  font-size: 14px;
+  color: #868786;
 }
 
 @media (min-width: 1200px) {
