스타일:관리자페이지-상품등록-1상품분류정보

--- a/flirdog/src/main/webapp/src/css/admin/rightContent.module.css
+++ b/flirdog/src/main/webapp/src/css/admin/rightContent.module.css
@@ -1,10 +1,12 @@
 .rightContent {
-  width: calc(100% - 240px);
+  width: calc(100% - 203px);
 
   position: absolute;
-  left: 240px;
-  margin-top: 10px;
+  left: 203px;
+  padding: 37px;
+
   /* top: 155.8px; */
+  background-color: rgb(255, 246, 248);
 }
 .rightContentTop {
   color: gray;
