--- a/flirdog/src/main/webapp/src/css/admin/1상품관리/productDetail.module.css
+++ b/flirdog/src/main/webapp/src/css/admin/1상품관리/productDetail.module.css
@@ -1,10 +1,14 @@
 .categoryDiv {
+  color: gray;
   padding: 4px;
   display: flex;
   justify-content: flex-start;
   align-items: center;
   font-size: 0.8em;
   height: 30px;
+}
+.categoryDiv:hover {
+  background-color: #e9e9e9;
 }
 
 .categorySelected {
@@ -13,10 +17,15 @@
 }
 .contentContainerCategory {
   padding: 15px;
-  width: 30%;
+  width: 50%;
   min-width: 150px;
   min-height: 85%;
   max-height: 100%;
+}
+
+.contentContainerCategorySpan {
+  font-weight: 700;
+  font-size: 0.9rem;
 }
 
 .categorySmallBox {
@@ -33,6 +42,6 @@
   justify-content: flex-start;
   align-items: flex-start;
 
-  width: 85%;
+  width: 100%;
   background-color: white;
 }
