--- a/flirdog/src/main/webapp/src/css/admin/1상품관리/productPrimaryInfo.module.css
+++ b/flirdog/src/main/webapp/src/css/admin/1상품관리/productPrimaryInfo.module.css
@@ -1,3 +1,8 @@
+.fontStyleGray08 {
+  font-size: 0.8rem;
+  color: #6d6d6d;
+}
+
 .tableDiv {
   padding: 25px;
   background-color: white;
@@ -12,6 +17,7 @@
 .tableTd {
   border: 1px solid rgb(180, 180, 180);
   padding: 5px;
+  vertical-align: middle;
 }
 
 .tableTh {
@@ -22,4 +28,5 @@
   font-size: 0.7rem;
   text-align: center;
   background-color: #dddddd;
+  vertical-align: middle;
 }
