--- a/flirdog/src/main/webapp/src/css/main/HeaderCustomNavDropdownElementMobile.css
+++ b/flirdog/src/main/webapp/src/css/main/HeaderCustomNavDropdownElementMobile.css
@@ -1,3 +1,8 @@
+.navText {
+  font-size: 1rem;
+  color: white;
+}
+
 .custom-dropdown-mobile .custom-dropdown-toggle-mobile {
   display: none;
   background-color: transparent;
