--- a/flirdog/src/main/webapp/src/css/admin/rightContent.module.css
+++ b/flirdog/src/main/webapp/src/css/admin/rightContent.module.css
@@ -1,3 +1,18 @@
+.table {
+  width: 100%;
+  border-collapse: collapse;
+  border-spacing: 0;
+  border: 1px solid #ddd;
+}
+
+.table tr {
+  text-align: center;
+  font-size: 0.9rem;
+}
+
+.table th {
+  background-color: #d9d9d9;
+}
 .rightContent {
   width: calc(100% - 203px);
 
