스타일:관리자페이지-전체상품조회수정 완료

--- a/flirdog/src/main/webapp/src/css/admin/filterForm.module.css
+++ b/flirdog/src/main/webapp/src/css/admin/filterForm.module.css
@@ -1,11 +1,19 @@
 .iconContainer {
   width: 70px;
   height: 70px;
-  background-color: #767a83;
+
   border-radius: 50%;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.iconContainerPink {
+  background-color: rgb(245, 96, 132);
+}
+
+.iconContainerGray {
+  background-color: #767a83;
 }
 
 .icon {
