--- a/flirdog/src/main/webapp/src/css/admin/rightContent.module.css
+++ b/flirdog/src/main/webapp/src/css/admin/rightContent.module.css
@@ -1,3 +1,14 @@
+.imgContainer {
+  width: 200px;
+  height: 150px;
+}
+
+.imgContainer img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
 .table {
   width: 100%;
   border-collapse: collapse;
@@ -13,6 +24,7 @@
 .table th {
   background-color: #d9d9d9;
 }
+
 .rightContent {
   width: calc(100% - 203px);
 
