스타일:관리자페이지 메인화면 자동완료배너 추가 및 채팅 토글생성

--- a/flirdog/src/main/webapp/src/css/admin/0관리자홈/aiSupportList.module.css
+++ b/flirdog/src/main/webapp/src/css/admin/0관리자홈/aiSupportList.module.css
@@ -1,5 +1,5 @@
 .subTitle {
-  color: blue;
+  color: rgb(66, 119, 254);
   font-size: 0.9rem;
 }
 
@@ -8,6 +8,7 @@
 }
 .title {
   font-size: 1rem;
+  font-weight: 800;
 }
 
 .relative {
