--- a/flirdog/src/main/webapp/src/css/admin/adminMainContent.module.css
+++ b/flirdog/src/main/webapp/src/css/admin/adminMainContent.module.css
@@ -1,3 +1,13 @@
+@keyframes fade {
+  0%,
+  100% {
+    opacity: 0.8;
+  }
+  50% {
+    opacity: 1;
+  }
+}
+
 @keyframes backgroundColorChange {
   from {
     background-color: white; /* 초기 배경색 */
@@ -103,6 +113,12 @@
   }
 }
 
+.mainBanner {
+  width: 100%;
+  animation: fade 5s infinite;
+  cursor: pointer;
+}
+
 .leftContainer {
   width: 70%;
   height: 100%;
@@ -120,7 +136,7 @@
 }
 
 .aiContents:hover {
-  background-color: #d0d0dc;
+  background-color: #d3d7ea;
 }
 
 .aiOutput {
@@ -159,61 +175,8 @@
   width: 100%;
 }
 
-.chatAi {
-  position: fixed;
-  z-index: 80;
-
-  bottom: 0;
-  left: 0;
-
-  color: white;
-  height: 15%;
-  width: 100%;
-  min-height: 120px;
-  background-color: #343541;
-  padding: 10px;
-  animation: backgroundColorChange 0.5s ease-out;
-}
-
-.chatAiExplain {
-  font-size: 0.8rem;
-}
-
-.chatAiTextDiv {
-  padding-left: 20px;
-  background-color: inherit;
-  color: white;
-  width: 80%;
-  height: 50%;
-  min-height: 50px;
-  border: 1px solid #555561;
-  border-radius: 10px;
-}
-
-.chatAiInputRelative {
-  position: relative;
-  width: 100%;
-  height: 50%;
-  min-height: 50px;
-  background-color: inherit;
-}
-
 .flicker {
   animation: flicker 3s linear both;
-}
-
-.openailogo {
-  position: absolute;
-  bottom: 3px;
-  right: 11vw;
-  border-radius: 50%;
-  width: 50px;
-  cursor: pointer;
-  transition: all 0.2s ease-in-out;
-}
-.openailogo:hover {
-  opacity: 0.5;
-  transform: scale(1.2) rotate(20deg);
 }
 
 .rightContainerElement {
@@ -225,7 +188,7 @@
   top: 0px;
   right: 0px;
   height: 20px;
-  background-color: #a7a7a7;
+  background-color: red;
   color: white;
   cursor: pointer;
 }
