캐러셀 구현 및 css 마무리

--- a/src/main/webapp/src/css/somoim/main/somoimHighlightCard.module.css
+++ b/src/main/webapp/src/css/somoim/main/somoimHighlightCard.module.css
@@ -31,6 +31,7 @@
     top: 70%;
     transform: translateY(-60%);
 
+    overflow-wrap: break-word;
     word-wrap: break-word;
     flex-direction: column;
 }
