--- a/src/main/webapp/src/css/date/dateReadMore.module.css
+++ b/src/main/webapp/src/css/date/dateReadMore.module.css
@@ -4,12 +4,12 @@
     border: none;
     box-shadow: 0 3px 7px rgba(0, 0, 0, 0.4); /* 그림자 스타일 설정 */
 }
-.DateUpdateTitle {
+.ReadMoreTitle {
     display: flex;
     justify-content: left;
     align-items:center;
 }
-.DateUpdateTitleDiv{
+.ReadMoreTitleDiv{
     margin-top: 20px;
     width:300px;
     height:80px;
@@ -21,4 +21,121 @@
     display: flex;
     justify-content: center;
     align-items: center;
+}
+.ReadMoreHeader{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color:#F56084;
+    text-align:center;
+    border-radius: 10px;
+}
+.formTable{
+    margin-top: 3%;
+    background-color: lightpink;
+    border-radius: 20px;
+    padding: 1.5%;
+    margin-bottom: 3%;
+    color:white;
+}
+.formTableDiv{
+    background-color: white;
+    border-radius: 10px;
+}
+.CarouselDiv{
+    width: 60%;
+    height: 30%;
+    padding: 2%;
+}
+.filterDateContentDogname{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: lightpink;
+    border-radius: 10px;
+    height: 17%;
+    margin-top: 5%;
+    margin-bottom: 5%;
+    font-size: 1.3em;
+}
+.filterDateContentDogBreed{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: lightpink;
+    height: 17%;
+    border-radius: 10px;
+    font-size: 1.3em;
+    margin-bottom: 5%;
+}
+.filterDateContentSiteScore{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding:2.5%;
+    height: 17%;
+    background-color: lightpink;
+    border-radius: 10px;
+    margin-bottom: 0;
+    font-size: 1.3em;
+}
+.listStarScore{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top:5%;
+    margin-bottom:5%;
+    text-align: center;
+    background-color: lightgray;
+    border-radius: 10px;
+    height: 17%;
+}
+.matchingState{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin-top:5%;
+    background-color:lightgreen;
+    text-align:center;
+    border-radius: 10px;
+    height: 17%;
+    font-size: 1.3em;
+}
+
+input[type=checkbox] {
+    display: none;
+}
+
+input[type=checkbox]:checked + label {
+    color: #F56084; /* 클릭한 후 글자색을 변경 */
+    background-color: white;
+    align-items: center;
+}
+
+.labelClass {
+    color: white; /* 클릭하기 전 글자색 설정 */
+    display: flex;
+    justify-content: center;
+    width: 50px;
+    height: 30px;
+    border: 4px solid #F56084;
+    background-color: white;
+    cursor: pointer;
+    border-radius: 5px;
+    position: relative;
+}
+.neutralizationLabel{
+    width: 30px;
+}
+
+input[type="checkbox"]:checked + .neutralizationLabel::before {
+    content: "✔"; /* 내용을 "✔"로 설정 */
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center; /* 세로 중앙 정렬을 위해 추가 */
+    text-align: center;
 }
