--- a/src/main/webapp/src/css/somoim/main/somoimHighlightCard.module.css
+++ b/src/main/webapp/src/css/somoim/main/somoimHighlightCard.module.css
@@ -10,14 +10,22 @@
     padding: 0;
     display: flex;
     justify-content: center;
+    align-items: center;
     position: relative;
+
+    margin: 0px auto;
+    overflow: hidden;
 }
 
 .moimHighlightImgDivImg {
     width: 90%;
+    height: auto;
     object-fit: cover;
     border-radius: 5%;
     border: 1px solid pink;
+
+    margin-top: 20px;
+    transition: all 0.3s ease;
 }
 
 .highlightShortDetail {
@@ -25,10 +33,11 @@
     font-weight: 400;
     color: white;
     padding: 10px;
-    width: 80%;
+    padding-left: 30px;
+    width: 90%;
     text-align: center;
     overflow-wrap: break-word;
-    top: 70%;
+    top: 65%;
     transform: translateY(-60%);
 
     overflow-wrap: break-word;
