--- a/src/main/webapp/src/css/date/dateWrite.module.css
+++ b/src/main/webapp/src/css/date/dateWrite.module.css
@@ -55,7 +55,7 @@
     align-items: center;
 }
 .FormSubjectTitleInput{
-    width: 53%;
+    width: 80%;
 }
 .FormTitleInput{
     width: 60%;
@@ -185,4 +185,12 @@ a:-webkit-any-link {
     color: -webkit-link;
     cursor: pointer;
     text-decoration: underline;
+}
+
+.mb-2{
+    margin-bottom: 1em;
+}
+
+.mb-3{
+    margin-bottom: 1em;
 }
