--- a/src/main/webapp/src/css/date/dateWrite.module.css
+++ b/src/main/webapp/src/css/date/dateWrite.module.css
@@ -147,6 +147,8 @@ input[type="checkbox"]:checked + .neutralizationLabel::before {
     display: none;
 }
 
+element.style {
+}
 .dropdown-item {
     display: block;
     width: 100%;
