--- a/src/main/webapp/src/css/date/dateReadMore.module.css
+++ b/src/main/webapp/src/css/date/dateReadMore.module.css
@@ -28,7 +28,6 @@
     align-items: center;
     background-color:#F56084;
     text-align:center;
-    border-radius: 10px;
 }
 .formTable{
     margin-top: 3%;
@@ -74,7 +73,7 @@
     align-items: center;
     padding:2.5%;
     height: 17%;
-    background-color: lightpink;
+    background-color: #F56084;
     border-radius: 10px;
     margin-bottom: 0;
     font-size: 1.3em;
