--- a/src/main/webapp/src/css/somoim/detail/SomoimPhotoModal_style.module.css
+++ b/src/main/webapp/src/css/somoim/detail/SomoimPhotoModal_style.module.css
@@ -26,7 +26,10 @@
     background-color: white;
   }
   
-
+  .item {
+    transition: all ease 0.2s;
+  }
+  
   .side {
     padding: 20px;
     width: 50%;
