기능:관리자페이지 통계 API chartjs

--- a/src/main/webapp/src/css/admin/rightContent.module.css
+++ b/src/main/webapp/src/css/admin/rightContent.module.css
@@ -42,6 +42,11 @@
   vertical-align: middle;
 }
 
+.dataBoxContainer {
+  width: 25vw;
+  height: 300px;
+}
+
 .rightContent {
   width: calc(100% - 203px);
 
