--- a/src/main/webapp/src/css/admin/rightContent.module.css
+++ b/src/main/webapp/src/css/admin/rightContent.module.css
@@ -47,11 +47,6 @@
   height: 250px;
   background-color: white;
 }
-.dataBoxContainer2 {
-  width: 80vw;
-  height: 250px;
-  background-color: white;
-}
 
 .dataBox {
   height: 220px;
@@ -59,10 +54,17 @@
 
 .rightContent {
   width: calc(100% - 203px);
+  margin-left: 203px;
 
-  position: absolute;
-  left: 203px;
-  padding: 37px;
+  padding: 37px 37px 0 37px;
+
+  /* top: 155.8px; */
+  background-color: rgb(255, 246, 248);
+}
+.rightContent2 {
+  width: calc(100% - 203px);
+  margin-left: 203px;
+  padding-left: 37px;
 
   /* top: 155.8px; */
   background-color: rgb(255, 246, 248);
