--- a/src/main/webapp/src/css/admin/checkBtn.module.css
+++ b/src/main/webapp/src/css/admin/checkBtn.module.css
@@ -17,3 +17,11 @@
   opacity: 1;
   background-color: rgb(255, 65, 109);
 }
+
+.checkBtnDiv {
+  width: 30px;
+  height: 30px;
+  border: 4px solid rgb(245, 96, 132);
+  border-radius: 4px;
+  cursor: pointer;
+}
