사진첩 구현 완료 - 소모임 임시완성버전

--- a/src/main/webapp/src/css/somoim/detail/modal_styles.module.css
+++ b/src/main/webapp/src/css/somoim/detail/modal_styles.module.css
@@ -244,3 +244,10 @@
 
     background-color: transparent;
 }
+
+.carousel-control-prev-icon,
+.carousel-control-next-icon {
+  /* 스타일 정의 */
+  background-color: black;
+}
+
