--- a/src/main/webapp/src/css/somoim/detail/SomoimPhotoModal_style.module.css
+++ b/src/main/webapp/src/css/somoim/detail/SomoimPhotoModal_style.module.css
@@ -243,3 +243,12 @@
   
       background-color: transparent;
   }
+
+  .box {
+    transition: box-shadow 0.3s ease-in-out; /* 그림자 변경에 애니메이션을 추가할 수 있습니다. */
+  }
+
+  .box:hover {
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.6); /* 그림자 스타일 및 크기 조절 */
+  }
+
