--- a/src/main/webapp/src/css/somoim/main/SomoimMainList.module.css
+++ b/src/main/webapp/src/css/somoim/main/SomoimMainList.module.css
@@ -1,4 +1,4 @@
-.list {
+/* .list {
     width: 344px;
     height: 331px;
     flex: 1;
@@ -25,6 +25,24 @@
     font-family: 'Ribeye';
     font-weight: 400;
     word-wrap: break-word;
+} */
+
+.box {
+    transition: box-shadow 0.3s ease-in-out; /* 그림자 변경에 애니메이션을 추가할 수 있습니다. */
+  }
+
+  .box:hover {
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.6); /* 그림자 스타일 및 크기 조절 */
+    background-color: #ff77bd;  
 }
 
+  .boxBtn {
+    transition: box-shadow 0.3s ease-in-out; 
+    background-color: #FCABD5;
+  }
+
+  .boxBtn:hover {
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.6);
+    background-color: #ff77bd;
+  }
 
