--- a/src/main/webapp/src/css/somoim/main/somoimHighlightCard.module.css
+++ b/src/main/webapp/src/css/somoim/main/somoimHighlightCard.module.css
@@ -43,6 +43,8 @@
     overflow-wrap: break-word;
     word-wrap: break-word;
     flex-direction: column;
+
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
 /* 
